--- a/regfile_2r1w/config.json
+++ b/regfile_2r1w/config.json
@@ -4,9 +4,11 @@
     "CLOCK_PORT": "clk",
     "CLOCK_PERIOD": 10.0,
     "DESIGN_IS_CORE": true,
+    "FP_CORE_UTIL": 60,
 
     "FP_ASPECT_RATIO": 2,
-    "EXTRA_LEFS":      "/openlane/designs/mem_1r1w/runs/full_guide/results/final/lef/mem_1r1w.lef",
-    "EXTRA_GDS_FILES": "/openlane/designs/mem_1r1w/runs/full_guide/results/final/gds/mem_1r1w.gds",
-    "VERILOG_FILES_BLACKBOX": "dir::bb/*.v"
+    "EXTRA_LEFS": "dir::../mem_1r1w/runs/full_guide/results/final/lef/mem_1r1w.lef",
+    "EXTRA_GDS_FILES": "dir::../mem_1r1w/runs/full_guide/results/final/gds/mem_1r1w.gds",
+    "VERILOG_FILES_BLACKBOX": "dir::bb/*.v",
+    "MACRO_PLACEMENT_CFG": "dir::macro.cfg"
 }
